fix: ajuste la taille des éléments de type checkbox pour une meilleure visibilité

--- a/public/css/natives.css
+++ b/public/css/natives.css
@@ -626,8 +626,8 @@ input:not(
 
   &::before {
     content: "";
-    width: calc(var(--checkable-size, 1.25em) / 1.4);
-    height: calc(var(--checkable-size, 1.25em) / 1.4);
+    width: calc(var(--checkable-size, 1.25em) / 1);
+    height: calc(var(--checkable-size, 1.25em) / 1);
     transition-property: scale;
     transition-duration: var(--transition-duration, 0.25s);
     border: 1px solid var(--surface, Canvas);
